--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,57 @@
-# Site settings
-title: Your awesome title
-email: xaralaboskaripidis@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://xabikos.com" # the base hostname & protocol for your site
-twitter_username: xabikos
-github_username:  xabikos
+# Harmony Jekyll theme general configurations 
 
-# Build settings
-markdown: kramdown
+# Base URL
+baseurl:
+
+# Site live URL
+url: http://localhost:4000
+
+# Localhost 
+# url: http://localhost:4000
+
+# Harmony theme configuration. Please change accordingly.
+harmony:
+  name: xabikos
+  # Little description about your site
+  description: Harmony is a free responsive jekyll theme.
+  meta_description: Harmony is free responsive jekyll theme. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
+  basetheme: theme-base-01 # pre defined thmes are darken, blue-water, redish.
+  author: # Author details
+    name: Charalampos Karypidis
+    email: gayanvirajith@gmail.com
+    url: http://gayanvirajith.github.io
+
+  # Google Analytics key, leave blank to ignore
+  google_analytics_key: 
+
+  # Profile links, leave blank to ignore
+  social: 
+    github: xabikos
+    twitter: xabikos
+    facebook: 
+    gplus: 
+    dribble: 
+    pinterest: 
+  # Toggle disclaimer in footer
+  show_disclaimer: true
+
+# Conversion / Build settings 
+markdown:    kramdown
 highlighter: null
+
+# Permalinks
+permalink:        pretty
+
+exclude: 
+  - CNAME
+  - Gemfile
+  - Rakefile
+  - README.md
+  - .gitignore
+  - .sass-cache
+  - Gemfile.lock
+
+# Sass conversion configs
+sass:
+    sass_dir: assets/css/_sass
+    style: :compressed
