--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Harmony Jekyll theme general configurations 
 
 # Base URL
-baseurl:
+baseurl:""
 
 # Site live URL
-url: http://localhost:4000
+url: http://xabikos.com
 
 # Localhost 
 # url: http://localhost:4000
