--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Harmony Jekyll theme general configurations 
 
 # Base URL
-baseurl:""
+baseurl:
 
 # Site live URL
-url: http://xabikos.com
+#url: http://xabikos.com
 
 # Localhost 
-# url: http://localhost:4000
+url: http://localhost:4000
 
 # Harmony theme configuration. Please change accordingly.
 harmony:
