--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url: http://xabikos.com
 harmony:
   name: xabikos
   # Little description about your site
-  description: Harmony is free responsive jekyll theme.
+  description:
   meta_description: Harmony is free responsive jekyll theme. This will appear in your document head meta (for Google search results) and in your feed.xml site description.
   basetheme: theme-base-01 # pre defined thmes are darken, blue-water, redish.
   author: # Author details
