--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ harmony:
   name: xabikos
   # Little description about your site
   description:
-  meta_description: Harmony is free responsive jekyll theme. This will appear in your document head meta (for Google search results) and in your feed.xml site description.
+  meta_description: This is Charalampos Karypidis technical blog. It contains information about software development with Microsoft Technologies (.NET, Windows Azure, Azure web sites)
   basetheme: theme-base-01 # pre defined thmes are darken, blue-water, redish.
   author: # Author details
     name: Charalampos Karypidis
